<resources>
    <string name="app_name">team_project</string> //앱 이름

    //로그인,회원가입
    <string name="login" >로그인</string>  //로그인 페이지 로그인
    <string name="userid" >아이디(이메일)</string> //로그인페이지 아이디
    <string name="sign_up" >회원가입</string> //로그인,회원가입페이지 회원가입
    <string name="loginauto">자동로그인</string> //로그인페이지 자동로그인 체크박스

    <string name="email" >이메일</string> //회원가입페이지 이메일
    <string name="password" >비밀번호</string> //로그인,회원가입페이지 전화번호
    <string name="name" >이름</string> //회원가입페이지 이름
    <string name="phone_number">전화번호</string> // 회원가입페이지 전화번호
    <string name="birth_date">생년월일</string> //회원가입페이지 생년월일
    <string name="male">남</string> //회원가입페이지 성별 선택
    <string name="female">여</string> //회원가입페이지 성별 선택
    <string name="back_to_login">뒤로가기</string> //회원가입페이지 뒤로가기
    <string name="username">사용자 프로필 이름</string>
    <string name="address">주소</string>

    //메인홈 프레그먼트
    <string name="title_home">홈</string> //홈프레그먼트 메뉴 이름
    <string name="home_setting">홈 화면 설정</string> // 메인홈 설정

    //환경 프레그먼트
    <string name="title_environment" >환경</string> //환경프레그먼트 메뉴 이름
    <string name="point_page">포인트페이지</string> //환경프레그먼트 탭 포인트페이지 이름
    <string name="store_page">상점페이지</string>//환경프레그먼트 탭 상점페이지 이름
    <string name="authentication_icon" /> //환경페이지 인증리스트 아이콘

    //게시판 프레그먼트
    <string name="title_board">게시판</string> //게시판프레그먼트 메뉴 이름

    //프로필(마이페이지)프레그먼트
    <string name="title_user">친구</string> //친구프레그먼트 메뉴 이름
    <string name="chat_button">채팅하기</string>

    //채팅 프레그먼트
    <string name="send">전송 </string>
    <string name="title_chat">채팅</string> //채팅프레그먼트 메뉴 이름
    <string name="hint_enter_message">메세지 입력</string>

    //프로필(마이페이지)프레그먼트
    <string name="title_profile">프로필</string> //프로필프레그먼트 메뉴 이름

    //툴바
    <string name="notifications" >알림</string> //툴바 알림
    <string name="search" >검색</string> //툴바 검색
    <string name="search_hint" >검색</string> //검색페이지
    <string name="notification_title">알림 제목</string> //알림페이지
    <string name="back_button">뒤로 가기</string>
    <string name="home_logo">메인 홈 로고</string>


</resources>