<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:padding="16dp">

    <ImageView
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_home_logo"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp" />

    <EditText
        android:id="@+id/etUserid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userid"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="8dp"/>

    <CheckBox
        android:id="@+id/cbLoginauto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginauto"
        android:layout_marginTop="8dp"/>


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="8dp"/>
</LinearLayout>
